[gd_scene load_steps=16 format=4 uid="uid://du82lduwefmhr"]

[ext_resource type="Script" uid="uid://ds2dgkhsypybu" path="res://scripts/Player.gd" id="1"]
[ext_resource type="Material" path="res://models_and_materials/light.material" id="3"]
[ext_resource type="Environment" path="res://House_env.tres" id="4"]
[ext_resource type="AudioStream" uid="uid://d1wvpajbhw1mx" path="res://sounds/Flashlight Turn On Sound Effect.ogg" id="5"]
[ext_resource type="PackedScene" uid="uid://bw7dl3llo2ouq" path="res://character-q.glb" id="7_cw2d6"]

[sub_resource type="CylinderShape3D" id="1"]
height = 2.64893

[sub_resource type="Animation" id="2"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="3"]
resource_name = "walking"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, -1), Vector3(0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_khinc"]
_data = {
&"idle": SubResource("2"),
&"walking": SubResource("3")
}

[sub_resource type="AnimationNodeAnimation" id="4"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="5"]
animation = &"walking"

[sub_resource type="AnimationNodeBlendSpace1D" id="6"]

[sub_resource type="AnimationNodeBlendSpace1D" id="7"]
blend_point_0/node = SubResource("4")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("5")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("6")
blend_point_2/pos = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qu4a1"]
resource_name = "Metal"
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_color = Color(0, 0, 0, 1)
metallic = 0.28
metallic_specular = 0.6
roughness = 0.21

[sub_resource type="ArrayMesh" id="8"]
_surfaces = [{
"aabb": AABB(-0.0985371, -0.0985372, -0.362452, 0.197074, 0.197074, 0.781395),
"attribute_data": PackedByteArray("AAAAAAAAAD8AAIA/AAAAPwAAAAAAAAAAAACAPwAAAAAAAHg/AAAAPwAAeD8AAAAAAABwPwAAAD8AAHA/AAAAAAAAaD8AAAA/AABoPwAAAAAAAGA/AAAAPwAAYD8AAAAAAABYPwAAAD8AAFg/AAAAAAAAUD8AAAA/AABQPwAAAAAAAEg/AAAAPwAASD8AAAAAAABAPwAAAD8AAEA/AAAAAAAAOD8AAAA/AAA4PwAAAAAAADA/AAAAPwAAMD8AAAAAAAAoPwAAAD8AACg/AAAAAAAAID8AAAA/AAAgPwAAAAAAABg/AAAAPwAAGD8AAAAAAAAQPwAAAD8AABA/AAAAAAAACD8AAAA/AAAIPwAAAAAAAAA/AAAAPwAAAD8AAAAAAADwPgAAAD8AAPA+AAAAAAAA4D4AAAA/AADgPgAAAAAAANA+AAAAPwAA0D4AAAAAAADAPgAAAD8AAMA+AAAAAAAAsD4AAAA/AACwPgAAAAAAAKA+AAAAPwAAoD4AAAAAAACQPgAAAD8AAJA+AAAAAAAAgD4AAAA/AACAPgAAAAAAAGA+AAAAPwAAYD4AAAAAAABAPgAAAD8AAEA+AAAAAAAAID4AAAA/AAAgPgAAAAAAAAA+AAAAPwAAAD4AAAAAAADAPQAAAD8AAMA9AAAAAAAAgD0AAAA/AACAPQAAAAAAAAA9AAAAPwAAAD0AAAAAAAAAAAAAAD8AAIA/AAAAPwAAeD8AAAA/AABwPwAAAD8AAGg/AAAAPwAAYD8AAAA/AABYPwAAAD8AAFA/AAAAPwAASD8AAAA/AABAPwAAAD8AADg/AAAAPwAAMD8AAAA/AAAoPwAAAD8AACA/AAAAPwAAGD8AAAA/AAAQPwAAAD8AAAg/AAAAPwAAAD8AAAA/AADwPgAAAD8AAOA+AAAAPwAA0D4AAAA/AADAPgAAAD8AALA+AAAAPwAAoD4AAAA/AACQPgAAAD8AAIA+AAAAPwAAYD4AAAA/AABAPgAAAD8AACA+AAAAPwAAAD4AAAA/AADAPQAAAD8AAIA9AAAAPwAAAD0AAAA/AOA/PwCgED8AIEk/AIARPwAAUj8AQBQ/AEBaPwCgGD8AYGE/AIAePwBAZz8AoCU/AKBrPwDgLT8AYG4/AMA2PwBAbz8A4D8/AGBuPwAgST8AoGs/AABSPwBAZz8AQFo/AGBhPwBgYT8AQFo/AEBnPwAAUj8AoGs/ACBJPwBgbj8A4D8/AEBvPwDANj8AYG4/AOAtPwCgaz8AoCU/AEBnPwCAHj8AYGE/AKAYPwBAWj8AQBQ/AABSPwCAET8AIEk/AKAQPwDgPz8AgBE/AMA2PwBAFD8A4C0/AKAYPwCgJT8AgB4/AIAePwCgJT8AoBg/AOAtPwBAFD8AwDY/AIARPwAAAAAAAAA/AABAPwCAAj8AAIA/AAAAPwDgSz8AoAM/AAB4PwAAAD8AgFc/ACAHPwAAcD8AAAA/ACBiPwDgDD8AAGg/AAAAPwAAYD8AAAA/AGBrPwCAFD8AAFg/AAAAPwAAcz8AwB0/AABQPwAAAD8AwHg/AGAoPwAASD8AAAA/AEB8PwAAND8AAEA/AAAAPwBgfT8AAEA/AAA4PwAAAD8AQHw/AOBLPwAAMD8AAAA/AMB4PwCAVz8AACg/AAAAPwAAcz8AIGI/AAAgPwAAAD8AYGs/AGBrPwAAGD8AAAA/ACBiPwAAcz8AABA/AAAAPwCAVz8AwHg/AAAIPwAAAD8A4Es/AEB8PwAAAD8AAAA/AOA/PwBgfT8AAPA+AAAAPwAAND8AQHw/AADgPgAAAD8AYCg/AMB4PwAA0D4AAAA/AMAdPwAAcz8AAMA+AAAAPwCAFD8AYGs/AACwPgAAAD8A4Aw/ACBiPwAAoD4AAAA/ACAHPwCAVz8AAJA+AAAAPwCgAz8A4Es/AACAPgAAAD8AgAI/AOA/PwAAYD4AAAA/AKADPwAAND8AAEA+AAAAPwAgBz8AYCg/AAAgPgAAAD8A4Aw/AMAdPwAAAD4AAAA/AIAUPwCAFD8AAMA9AAAAPwDAHT8A4Aw/AACAPQAAAD8AYCg/ACAHPwAAAD0AAAA/AAA0PwCgAz8A4D8/AKAQPwAgST8AgBE/AABSPwBAFD8AQFo/AKAYPwBgYT8AgB4/AEBnPwCgJT8AoGs/AOAtPwBgbj8AwDY/AEBvPwDgPz8AYG4/ACBJPwCgaz8AAFI/AEBnPwBAWj8AYGE/AGBhPwBAWj8AQGc/AABSPwCgaz8AIEk/AGBuPwDgPz8AQG8/AMA2PwBgbj8A4C0/AKBrPwCgJT8AQGc/AIAePwBgYT8AoBg/AEBaPwBAFD8AAFI/AIARPwAgST8AoBA/AOA/PwCAET8AwDY/AEAUPwDgLT8AoBg/AKAlPwCAHj8AgB4/AKAlPwCgGD8A4C0/AEAUPwDANj8AgBE/AOA/PwCgED8AIEk/AIARPwAAUj8AQBQ/AEBaPwCgGD8AYGE/AIAePwBAZz8AoCU/AKBrPwDgLT8AYG4/AMA2PwBAbz8A4D8/AGBuPwAgST8AoGs/AABSPwBAZz8AQFo/AGBhPwBgYT8AQFo/AEBnPwAAUj8AoGs/ACBJPwBgbj8A4D8/AEBvPwDANj8AYG4/AOAtPwCgaz8AoCU/AEBnPwCAHj8AYGE/AKAYPwBAWj8AQBQ/AABSPwCAET8AIEk/AKAQPwDgPz8AgBE/AMA2PwBAFD8A4C0/AKAYPwCgJT8AgB4/AIAePwCgJT8AoBg/AOAtPwBAFD8AwDY/AIARPwDglz4AoAM/AAB4PwAAAAAAAAAAAAAAAAAAgD4AgAI/AACAPwAAAAAAAK8+ACAHPwAAcD8AAAAAAEDEPgDgDD8AAGg/AAAAAADg1j4AgBQ/AABgPwAAAAAAIOY+AMAdPwAAWD8AAAAAAIDxPgBgKD8AAFA/AAAAAACA+D4AADQ/AABIPwAAAAAA4Po+AABAPwAAQD8AAAAAAID4PgDgSz8AADg/AAAAAACA8T4AgFc/AAAwPwAAAAAAIOY+ACBiPwAAKD8AAAAAAODWPgBgaz8AACA/AAAAAABAxD4AAHM/AAAYPwAAAAAAAK8+AMB4PwAAED8AAAAAAOCXPgBAfD8AAAg/AAAAAADgfz4AYH0/AAAAPwAAAAAAAFA+AEB8PwAA8D4AAAAAAOAhPgDAeD8AAOA+AAAAAADg7j0AAHM/AADQPgAAAAAAYKQ9AGBrPwAAwD4AAAAAAKBOPQAgYj8AALA+AAAAAACA5zwAgFc/AACgPgAAAAAAYG88AOBLPwAAkD4AAAAAAMAjPADgPz8AAIA+AAAAAABgbzwAADQ/AABgPgAAAAAAgOc8AGAoPwAAQD4AAAAAAKBOPQDAHT8AACA+AAAAAABgpD0AgBQ/AAAAPgAAAAAAAMA9AAAAAADg7j0A4Aw/AACAPQAAAAAA4CE+ACAHPwAAAD0AAAAAAABQPgCgAz8AAAAAACD+PgAAgD8AIP4+AAB4PwAg/j4AAHA/ACD+PgAAaD8AIP4+AABgPwAg/j4AAFg/ACD+PgAAUD8AIP4+AABIPwAg/j4AAEA/ACD+PgAAOD8AIP4+AAAwPwAg/j4AACg/ACD+PgAAID8AIP4+AAAYPwAg/j4AABA/ACD+PgAACD8AIP4+AAAAPwAg/j4AAPA+ACD+PgAA4D4AIP4+AODPPgAg/j4AAMA+ACD+PgAAsD4AIP4+AACgPgAg/j4AAJA+ACD+PgAAgD4AIP4+AABgPgAg/j4AAEA+ACD+PgAAID4AIP4+AAAAPgAg/j4AAMA9ACD+PgAAgD0AIP4+AAAAPQAg/j4AAPA+AAAAPwAAAD8AAAA/AOBfPwAAAD8AAGg/AAAAPwAAAD0AAAA/AACAPQAAAD8AAOA+AAAAPwDgVz8AAAA/AAAAAAAAAD8AAIA/AAAAPwDgzz4AAAA/AABQPwAAAD8A4L8+AAAAPwAASD8A4P8+AACwPgAAAD8AAEA/AOD/PgDgnz4AAAA/AAA4PwAAAD8AAJA+AAAAPwAAMD8AAAA/AACAPgAAAD8AACg/AAAAPwAAYD4AAAA/AAAgPwAAAD8AAEA+AOD/PgAAGD8AAAA/AAAgPgAAAD8AABA/AAAAPwAAeD8A4P8+AAAAPgAAAD8A4Ac/AAAAPwAAcD8AAAA/AADAPQAAAD8="),
"format": 34359742487,
"index_count": 1818,
"index_data": PackedByteArray("RgEFAAMARgFHAQUARwEHAAUARwFIAQcASAEJAAcASAFJAQkASQELAAkASQFKAQsASgENAAsASgFLAQ0ASwEPAA0ASwFMAQ8ATAERAA8ATAFNAREATQETABEATQFOARMATgEVABMATgFPARUATwEXABUATwFQARcAUAEZABcAUAFRARkAUQEbABkAUQFSARsAUgEdABsAUgFTAR0AUwEfAB0AUwFUAR8AVAEhAB8AVAFVASEAVQEjACEAVQFWASMAVgElACMAVgFXASUAVwEnACUAVwFYAScAWAEpACcAWAFZASkAWQErACkAWQFaASsAWgEtACsAWgFbAS0AWwEvAC0AWwFcAS8AXAExAC8AXAFdATEAXQEzADEAXQFeATMAXgE1ADMAXgFfATUAXwE3ADUAXwFgATcAYAE5ADcAYAFhATkAYQE7ADkAYQFiATsAYgE9ADsAYgFjAT0AYwE/AD0AYwFkAT8ABwAFAQUABwAKAQUBZAFBAD8AZAFlAUEAZQECAEEAZQFFAQIADgBKABAADgBJAEoAZwGmAGYBZwGkAKYAIABTACIAIABSAFMAMgBcADQAMgBbAFwABgBGAAgABgBFAEYAGABPABoAGABOAE8AKgBYACwAKgBXAFgAPABhAD4APABgAGEAEABLABIAEABKAEsAIgBUACQAIgBTAFQANABdADYANABcAF0ACABHAAoACABGAEcAGgBQABwAGgBPAFAALABZAC4ALABYAFkAPgBiAEAAPgBhAGIAEgBMABQAEgBLAEwAJABVACYAJABUAFUANgBeADgANgBdAF4ACgBIAAwACgBHAEgAHABRAB4AHABQAFEALgBaADAALgBZAFoAAQBEAAQAAQBDAEQAQABCAAAAQABiAEIAFABNABYAFABMAE0AJgBWACgAJgBVAFYAOABfADoAOABeAF8ADABJAA4ADABIAEkAHgBSACAAHgBRAFIAMABbADIAMABaAFsABABFAAYABABEAEUAFgBOABgAFgBNAE4AKABXACoAKABWAFcAOgBgADwAOgBfAGAAeQDbAHoAeQDaANsAaQGMAGgBaQGLAIwAawHCAGoBawHAAMIAZgGoAGwBZgGmAKgAaAGOAG0BaAGMAI4AagGDAG4BagHCAIMAbAGqAHABbAGoAKoAbQGQAHEBbQGOAJAAcAGsAHIBcAGqAKwAcQGSAHMBcQGQAJIAcgGuAHQBcgGsAK4AcwGUAHUBcwGSAJQAdAGwAHYBdAGuALAAdQGWAHcBdQGUAJYAdgGyAHgBdgGwALIAdwGYAHkBdwGWAJgAeAG0AHoBeAGyALQAeQGaAHsBeQGYAJoAegG2AHwBegG0ALYAewGcAH0BewGaAJwAfAG4AH4BfAG2ALgAfQGeAH8BfQGcAJ4AfgG6AIABfgG4ALoAfwGgAIEBfwGeAKAAbwGHAIIBbwGFAIcAgAG8AIMBgAG6ALwAgQGiAIQBgQGgAKIAggGJAIUBggGHAIkAgwG+AIYBgwG8AL4AhAGkAGcBhAGiAKQAhQGLAGkBhQGJAIsAhgHAAGsBhgG+AMAAZACEAGMAZACGAIQAZQCGAGQAZQCIAIYAZgCIAGUAZgCKAIgAZwCKAGYAZwCNAIoAaACNAGcAaACPAI0AaQCPAGgAaQCRAI8AagCRAGkAagCTAJEAawCTAGoAawCVAJMAbACVAGsAbACXAJUAbQCXAGwAbQCZAJcAbgCZAG0AbgCbAJkAbwCbAG4AbwCdAJsAcACdAG8AcACfAJ0AcQCfAHAAcQChAJ8AcgChAHEAcgCjAKEAcwCjAHIAcwClAKMAdAClAHMAdACnAKUAdQCnAHQAdQCpAKcAdgCpAHUAdgCrAKkAdwCrAHYAdwCtAKsAeACtAHcAeACvAK0AeQCvAHgAeQCxAK8AegCxAHkAegCzALEAewCzAHoAewC1ALMAfAC1AHsAfAC3ALUAfQC3AHwAfQC5ALcAfgC5AH0AfgC7ALkAfwC7AH4AfwC9ALsAgAC9AH8AgAC/AL0AgQC/AIAAgQDBAL8AggDBAIEAggDDAMEAYwDDAIIAYwCEAMMA3QD+AN4A3QD9AP4AbADOAG0AbADNAM4AegDcAHsAegDbANwAbQDPAG4AbQDOAM8AewDdAHwAewDcAN0AbgDQAG8AbgDPANAAfADeAH0AfADdAN4AbwDRAHAAbwDQANEAfQDfAH4AfQDeAN8AcADSAHEAcADRANIAYwDFAGQAYwDEAMUAfgDgAH8AfgDfAOAAcQDTAHIAcQDSANMAZADGAGUAZADFAMYAfwDhAIAAfwDgAOEAcgDUAHMAcgDTANQAZQDHAGYAZQDGAMcAgADiAIEAgADhAOIAcwDVAHQAcwDUANUAZgDIAGcAZgDHAMgAgQDjAIIAgQDiAOMAdADWAHUAdADVANYAZwDJAGgAZwDIAMkAggDEAGMAggDjAMQAdQDXAHYAdQDWANcAaADKAGkAaADJAMoAdgDYAHcAdgDXANgAaQDLAGoAaQDKAMsAdwDZAHgAdwDYANkAagDMAGsAagDLAMwAeADaAHkAeADZANoAawDNAGwAawDMAM0A0ADxANEA0ADwAPEA3gD/AN8A3gD+AP8A0QDyANIA0QDxAPIAxADlAMUAxADkAOUA3wAAAeAA3wD/AAAB0gDzANMA0gDyAPMAxQDmAMYAxQDlAOYA4AABAeEA4AAAAQEB0wD0ANQA0wDzAPQAxgDnAMcAxgDmAOcA4QACAeIA4QABAQIB1AD1ANUA1AD0APUAxwDoAMgAxwDnAOgA4gADAeMA4gACAQMB1QD2ANYA1QD1APYAyADpAMkAyADoAOkA4wDkAMQA4wADAeQA1gD3ANcA1gD2APcAyQDqAMoAyQDpAOoA1wD4ANgA1wD3APgAygDrAMsAygDqAOsA2AD5ANkA2AD4APkAywDsAMwAywDrAOwA2QD6ANoA2QD5APoAzADtAM0AzADsAO0A2gD7ANsA2gD6APsAzQDuAM4AzQDtAO4A2wD8ANwA2wD7APwAzgDvAM8AzgDuAO8A3AD9AN0A3AD8AP0AzwDwANAAzwDvAPAACQEHAQQBBwFCAUQBQgE9AUABPQE5ATsBOQE1ATcBNQExATMBMQEtAS8BLQEpASsBKQElAScBJQEhASMBIQEdAR8BHQEZARsBGQEVARcBFQERARMBEQENAQ8BDQEJAQsBCQFCAQcBQgE5AT0BOQExATUBMQEpAS0BKQEhASUBIQEZAR0BGQERARUBEQEJAQ0BCQE5AUIBOQEpATEBKQEZASEBGQEJAREBCQEpATkBKQEJARkBGQAaARcAGQAcARoBKwAsASkAKwAuASwBPQA+ATsAPQA/AT4BEQASAQ8AEQAUARIBIwAkASEAIwAmASQBNQA2ATMANQA4ATYBCQAKAQcACQAMAQoBGwAcARkAGwAeARwBLQAuASsALQAwAS4BPwA/AT0APwBBAT8BEwAUAREAEwAWARQBJQAmASMAJQAoASYBNwA4ATUANwA6ATgBCwAMAQkACwAOAQwBHQAeARsAHQAgAR4BLwAwAS0ALwAyATABQQBBAT8AQQBDAUEBFQAWARMAFQAYARYBJwAoASUAJwAqASgBOQA6ATcAOQA8AToBDQAOAQsADQAQAQ4BHwAgAR0AHwAiASABMQAyAS8AMQA0ATIBBQAIAQMABQAFAQgBAgBDAUEAAgAGAUMBFwAYARUAFwAaARgBKQAqAScAKQAsASoBOwA8ATkAOwA+ATwBDwAQAQ0ADwASARABIQAiAR8AIQAkASIBMwA0ATEAMwA2ATQBQABFAWUBQAAAAEUBPgBlAWQBPgBAAGUBPABkAWMBPAA+AGQBOgBjAWIBOgA8AGMBOABiAWEBOAA6AGIBNgBhAWABNgA4AGEBNABgAV8BNAA2AGABMgBfAV4BMgA0AF8BMABeAV0BMAAyAF4BLgBdAVwBLgAwAF0BLABcAVsBLAAuAFwBKgBbAVoBKgAsAFsBKABaAVkBKAAqAFoBJgBZAVgBJgAoAFkBJABYAVcBJAAmAFgBIgBXAVYBIgAkAFcBIABWAVUBIAAiAFYBHgBVAVQBHgAgAFUBHABUAVMBHAAeAFQBGgBTAVIBGgAcAFMBGABSAVEBGAAaAFIBFgBRAVABFgAYAFEBFABQAU8BFAAWAFABEgBPAU4BEgAUAE8BEABOAU0BEAASAE4BDgBNAUwBDgAQAE0BDABMAUsBDAAOAEwBCgBLAUoBCgAMAEsBCABKAUkBCAAKAEoBBgBJAUgBBgAIAEkBBABIAUcBBAAGAEgBAQBHAUYBAQAEAEcBYABrAWEAYACGAWsBRQBpAUYARQCFAWkBUgBnAVMAUgCEAWcBXwCGAWAAXwCDAYYBRACFAUUARACCAYUBUQCEAVIAUQCBAYQBXgCDAV8AXgCAAYMBQwCCAUQAQwBvAYIBUACBAVEAUAB/AYEBXQCAAV4AXQB+AYABTwB/AVAATwB9AX8BXAB+AV0AXAB8AX4BTgB9AU8ATgB7AX0BWwB8AVwAWwB6AXwBTQB7AU4ATQB5AXsBWgB6AVsAWgB4AXoBTAB5AU0ATAB3AXkBWQB4AVoAWQB2AXgBSwB3AUwASwB1AXcBWAB2AVkAWAB0AXYBSgB1AUsASgBzAXUBVwB0AVgAVwByAXQBSQBzAUoASQBxAXMBVgByAVcAVgBwAXIBSABxAUkASABtAXEBVQBwAVYAVQBsAXABYgBuAUIAYgBqAW4BRwBtAUgARwBoAW0BVABsAVUAVABmAWwBYQBqAWIAYQBrAWoBRgBoAUcARgBpAWgBUwBmAVQAUwBnAWYB"),
"material": SubResource("StandardMaterial3D_qu4a1"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 391,
"vertex_data": PackedByteArray("jTmaM7GPkL0FTbc+jTmaM7GPkL0FTbc+jTmaM7GPkL0bTbe+jTmaM7GPkL0bTbe+CJ9hPJvIjb0FTbc+CJ9hPJnIjb0bTbe+EkndPKeOhb0FTbc+EkndPKeOhb0bTbe+0aAgPYtlcL0FTbc+0aAgPYtlcL0bTbe+2HBMPclwTL0FTbc+2HBMPcZwTL0bTbe+mmVwPb+gIL0FTbc+mmVwPb+gIL0bTbe+r46FPfRI3bwFTbc+r46FPe5I3bwbTbe+ociNPdGeYbwFTbc+ociNPcSeYbwbTbe+vI+QPeL37LIFTbc+vI+QPR+MgLIbTbe+osiNPZ6eYTwFTbc+osiNPaueYTwbTbe+r46FPddI3TwFTbc+r46FPd1I3TwbTbe+mmVwPbWgID0FTbc+mmVwPbigID0bTbe+2HBMPb9wTD0FTbc+2HBMPcVwTD0bTbe+zqAgPYdlcD0FTbc+zqAgPYdlcD0bTbe+C0ndPKKOhT0FTbc+C0ndPKKOhT0bTbe+9Z5hPJbIjT0FTbc+9Z5hPJbIjT0bTbe+T6pRM6yPkD0FTbc+T6pRM6yPkD0bTbe+kJ5hvJbIjT0FTbc+kJ5hvJbIjT0bTbe+00jdvJ+OhT0FTbc+00jdvKKOhT0bTbe+s6AgvXtlcD0FTbc+s6AgvYFlcD0bTbe+vXBMvblwTD0FTbc+vXBMvblwTD0bTbe+f2Vwva6gID0FTbc+f2Vwva6gID0bTbe+no6FvcRI3TwFTbc+no6FvcpI3TwbTbe+kciNvWWeYTwFTbc+kciNvW+eYTwbTbe+pI+QvbK7ubMFTbc+pI+Qvbypp7MbTbe+jciNvR2fYbwFTbc+jciNvRafYbwbTbe+l46FvRpJ3bwFTbc+l46FvRRJ3bwbTbe+aWVwvdWgIL0FTbc+aWVwvdKgIL0bTbe+oHBMvdxwTL0FTbc+oHBMvdlwTL0bTbe+k6AgvZ5lcL0FTbc+k6AgvZ5lcL0bTbe+k0jdvK6Ohb0FTbc+k0jdvKqOhb0bTbe+/p1hvJ7Ijb0FTbc+/p1hvJzIjb0bTbe+/G6VM7fZub1ZgsQ+/G6VM7fZub1ZgsQ+8weRPIhHtr1ZgsQ+ej4OPRW0q71ZgsQ+mYFOPWyHmr1ZgsQ+j2qDPYdqg71ZgsQ+dIeaPYaBTr1ZgsQ+HbSrPWw+Dr1ZgsQ+jUe2PdgHkbxZgsQ+w9m5PRFm/LJZgsQ+jke2Pb4HkTxZgsQ+HbSrPV0+Dj1ZgsQ+dIeaPX2BTj1ZgsQ+j2qDPYJqgz1ZgsQ+lYFOPWyHmj1ZgsQ+dj4OPQ+0qz1ZgsQ+5weRPIJHtj1ZgsQ+RN4rM7LZuT1ZgsQ+vgeRvIJHtj1ZgsQ+Xz4OvQy0qz1ZgsQ+foFOvWSHmj1ZgsQ+g2qDvX9qgz1ZgsQ+aIeavXSBTj1ZgsQ+DbSrvVE+Dj1ZgsQ+f0e2vZoHkTxZgsQ+qtm5vQO44bNZgsQ+eke2vQoIkbxZgsQ+BLSrvYQ+Dr1ZgsQ+WoeavaKBTr1ZgsQ+cGqDvZNqg71ZgsQ+VYFOvXiHmr1ZgsQ+Nj4OvR60q71ZgsQ+YAeRvIxHtr1ZgsQ+wdWAM2Ivj7204NU+L3lfPBFvjL204NU+vi3bPCpJhL204NU+WBkfPawbbr204NU+mH5KPY1+Sr204NU+uhtuPUYZH7204NU+MEmEPact27y04NU+Fm+MPep4X7y04NU+bC+PPejO9bK04NU+F2+MPax4Xzy04NU+MEmEPYYt2zy04NU+uhtuPTwZHz204NU+l35KPYB+Sj204NU+VhkfPaYbbj204NU+wy3bPCFJhD204NU+FHlfPAlvjD204NU+xzIrM1svjz204NU+snhfvAlvjD204NU+hC3bvCBJhD204NU+PxkfvZcbbj204NU+gX5KvXh+Sj204NU+nxtuvTgZHz204NU+IEmEvXct2zy04NU+Bm+MvZJ4Xzy04NU+VC+Pverlu7O04NU+Am+MvU55X7y04NU+GUmEvcwt27y04NU+iRtuvV0ZH7204NU+YX5KvaB+Sr204NU+GBkfvcEbbr204NU+SC3bvDFJhL204NU+LXhfvBVvjL204NU+MfWTM+TNyb28f9Y+MfWTM+TNyb28f9Y+MfWTM+TNyb28f9Y+FHudPDvtxb28f9Y+FHudPDvtxb28f9Y+XnQaPV5xur28f9Y+XnQaPV5xur28f9Y+sDtgPUrLp728f9Y+sDtgPUrLp728f9Y+gbKOPXqyjr28f9Y+gbKOPXqyjr28f9Y+UcunPZ07YL28f9Y+UcunPZ07YL28f9Y+ZXG6PVB0Gr28f9Y+ZXG6PVB0Gr28f9Y+P+3FPfp6nby8f9Y+P+3FPfp6nby8f9Y+783JPWaCCrO8f9Y+783JPWaCCrO8f9Y+QO3FPd56nTy8f9Y+QO3FPd56nTy8f9Y+ZXG6PUB0Gj28f9Y+ZXG6PUB0Gj28f9Y+UcunPZM7YD28f9Y+UcunPZM7YD28f9Y+gbKOPXOyjj28f9Y+gbKOPXOyjj28f9Y+qztgPUnLpz28f9Y+qztgPUnLpz28f9Y+WXQaPVdxuj28f9Y+WXQaPVdxuj28f9Y+B3udPDPtxT28f9Y+B3udPDPtxT28f9Y+zgMeM93NyT28f9Y+zgMeM93NyT28f9Y+4XqdvDPtxT28f9Y+4XqdvDPtxT28f9Y+RHQavVNxuj28f9Y+RHQavVNxuj28f9Y+ljtgvUDLpz28f9Y+ljtgvUDLpz28f9Y+drKOvXCyjj28f9Y+drKOvXCyjj28f9Y+RsunvYk7YD28f9Y+RsunvYk7YD28f9Y+VnG6vTN0Gj28f9Y+VnG6vTN0Gj28f9Y+Mu3Fvbd6nTy8f9Y+Mu3Fvbd6nTy8f9Y+1s3JvVjV9bO8f9Y+1s3JvVjV9bO8f9Y+LO3FvTB7nby8f9Y+LO3FvTB7nby8f9Y+THG6vWp0Gr28f9Y+THG6vWp0Gr28f9Y+N8unvbs7YL28f9Y+N8unvbs7YL28f9Y+YbKOvYeyjr28f9Y+YbKOvYeyjr28f9Y+aTtgvVfLp728f9Y+aTtgvVfLp728f9Y+F3QavWhxur28f9Y+F3QavWhxur28f9Y+e3qdvD/txb28f9Y+e3qdvD/txb28f9Y+wdWAM2Mvj71cWM0+L3lfPBJvjL1cWM0+vi3bPCtJhL1cWM0+WBkfPa4bbr1cWM0+mH5KPY9+Sr1cWM0+uhtuPUgZH71cWM0+MEmEPaot27xcWM0+Fm+MPfF4X7xcWM0+bC+PPTQeFbNcWM0+F2+MPaV4XzxcWM0+MEmEPYMt2zxcWM0+uhtuPToZHz1cWM0+l35KPX5+Sj1cWM0+VhkfPaQbbj1cWM0+wy3bPCBJhD1cWM0+FHlfPAhvjD1cWM0+xzIrM1ovjz1cWM0+snhfvAhvjD1cWM0+hC3bvB9JhD1cWM0+PxkfvZUbbj1cWM0+gX5KvXZ+Sj1cWM0+nxtuvTYZHz1cWM0+IEmEvXQt2zxcWM0+Bm+MvYt4XzxcWM0+VC+PvUoBybNcWM0+Am+MvVV5X7xcWM0+GUmEvc8t27xcWM0+iRtuvV8ZH71cWM0+YX5KvaJ+Sr1cWM0+GBkfvcMbbr1cWM0+SC3bvDJJhL1cWM0+LXhfvBZvjL1cWM0+wdWAM2Mvj72Hzcs+L3lfPBJvjL2Hzcs+vi3bPCtJhL2Hzcs+WBkfPa4bbr2Hzcs+mH5KPY9+Sr2Hzcs+uhtuPUgZH72Hzcs+MEmEPaot27yHzcs+Fm+MPfJ4X7yHzcs+bC+PPQsRGbOHzcs+F2+MPaR4XzyHzcs+MEmEPYMt2zyHzcs+uhtuPToZHz2Hzcs+l35KPX5+Sj2Hzcs+VhkfPaQbbj2Hzcs+wy3bPCBJhD2Hzcs+FHlfPAhvjD2Hzcs+xzIrM1ovjz2Hzcs+snhfvAhvjD2Hzcs+hC3bvB9JhD2Hzcs+PxkfvZUbbj2Hzcs+gX5KvXZ+Sj2Hzcs+nxtuvTYZHz2Hzcs+IEmEvXQt2zyHzcs+Bm+MvYp4XzyHzcs+VC+PvbX6yrOHzcs+Am+MvVZ5X7yHzcs+GUmEvc8t27yHzcs+iRtuvV8ZH72Hzcs+YX5KvaJ+Sr2Hzcs+GBkfvcMbbr2Hzcs+SC3bvDJJhL2Hzcs+LXhfvBZvjL2Hzcs+6rE1PO5bZL1Tk7m+6rE1PO5bZL1Tk7m+pX2dMzvVaL1Tk7m+pX2dMzvVaL1Tk7m+pX2dMzvVaL1Tk7m+BTSyPA8cV71Tk7m+BTSyPA8cV71Tk7m+91oBPfKXQb1Tk7m+91oBPfKXQb1Tk7m+VKMkPUSjJL1Tk7m+VKMkPUSjJL1Tk7m+AJhBPedaAb1Tk7m+AJhBPedaAb1Tk7m+HhxXPeUzsrxTk7m+HhxXPeUzsrxTk7m+/ltkPayxNbxTk7m+/ltkPayxNbxTk7m+T9VoPbsAtrJTk7m+T9VoPbsAtrJTk7m+/1tkPYSxNTxTk7m+/1tkPYSxNTxTk7m+HhxXPcwzsjxTk7m+HhxXPcwzsjxTk7m+AJhBPdxaAT1Tk7m+AJhBPdxaAT1Tk7m+VKMkPT6jJD1Tk7m+VKMkPT6jJD1Tk7m+9VoBPeqXQT1Tk7m+9VoBPeqXQT1Tk7m+/zOyPAUcVz1Tk7m+/zOyPAUcVz1Tk7m+2rE1POhbZD1Tk7m+2rE1POhbZD1Tk7m+AG5rMzHVaD1Tk7m+AG5rMzHVaD1Tk7m+aLE1vOhbZD1Tk7m+aLE1vOhbZD1Tk7m+wTOyvAUcVz1Tk7m+wTOyvAUcVz1Tk7m+11oBveWXQT1Tk7m+11oBveWXQT1Tk7m+NqMkvTSjJD1Tk7m+NqMkvTSjJD1Tk7m+4pdBvdRaAT1Tk7m+4pdBvdRaAT1Tk7m+/BtXvb0zsjxTk7m+/BtXvb0zsjxTk7m+3VtkvVSxNTxTk7m+3VtkvVSxNTxTk7m+ItVovSCkmrNTk7m+ItVovSCkmrNTk7m+11tkve6xNbxTk7m+11tkve6xNbxTk7m+8RtXvQM0srxTk7m+8RtXvQM0srxTk7m+0JdBvfZaAb1Tk7m+0JdBvfZaAb1Tk7m+H6MkvVOjJL1Tk7m+H6MkvVOjJL1Tk7m+vVoBvQKYQb1Tk7m+vVoBvQKYQb1Tk7m+jjOyvBQcV71Tk7m+jjOyvBQcV71Tk7m+8rA1vPNbZL1Tk7m+8rA1vPNbZL1Tk7m+jTmaM7GPkL1dprQ+jTmaM7GPkL1dprQ+CJ9hPJvIjb1dprQ+EkndPKeOhb1dprQ+0aAgPYtlcL1dprQ+2HBMPclwTL1dprQ+mmVwPb+gIL1dprQ+r46FPfRI3bxdprQ+ociNPdGeYbxdprQ+vI+QPSwv7LJdprQ+osiNPZ6eYTxdprQ+r46FPddI3TxdprQ+mmVwPbWgID1dprQ+2HBMPb9wTD1dprQ+zqAgPYdlcD1dprQ+C0ndPKKOhT1dprQ+9Z5hPJbIjT1dprQ+T6pRM6yPkD1dprQ+kJ5hvJbIjT1dprQ+00jdvJ+OhT1dprQ+s6AgvXtlcD1dprQ+vXBMvblwTD1dprQ+f2Vwva6gID1dprQ+no6FvcRI3TxdprQ+kciNvWWeYTxdprQ+pI+QvT6aubNdprQ+jciNvR2fYbxdprQ+l46FvRpJ3bxdprQ+aWVwvdWgIL1dprQ+oHBMvdxwTL1dprQ+k6AgvZ5lcL1dprQ+k0jdvK6Ohb1dprQ+/p1hvJ7Ijb1dprQ+4XqdvDXtxT1eyMY+zgMeM97NyT1eyMY+gbKOPXmyjr1eyMY+sDtgPUnLp71eyMY+e3qdvD7txb1eyMY+F3QavWdxur1eyMY+RHQavVRxuj1eyMY+UcunPZw7YL1eyMY+MfWTM+PNyb1eyMY+MfWTM+PNyb1eyMY+ljtgvUHLpz1eyMY+ZXG6PU90Gr1eyMY+drKOvXGyjj1eyMY+P+3FPfh6nbxeyMY+RsunvYs7YD1eyMY+783JPS2V87JeyMY+VnG6vTR0Gj1eyMY+QO3FPeB6nTxeyMY+Mu3Fvbl6nTxeyMY+ZXG6PUF0Gj1eyMY+1s3JvXF57bNeyMY+UcunPZQ7YD1eyMY+LO3FvS57nbxeyMY+gbKOPXSyjj1eyMY+THG6vWl0Gr1eyMY+qztgPUrLpz1eyMY+N8unvbo7YL1eyMY+WXQaPVhxuj1eyMY+FHudPDrtxb1eyMY+YbKOvYayjr1eyMY+B3udPDXtxT1eyMY+XnQaPV1xur1eyMY+aTtgvVbLp71eyMY+/AD3wX33D4HwA4G/wdWAM8oDQ8RcWM0+iAgZvn8AAH/BFJ61L3lfPMEUnrVcWM0+PCVhrX8AAH88JWGtvi3bPDIzZaZcWM0+MjNlpn8AAH//P/+fWBkfPf8//59cWM0+zEyZmX8AAH/MTJmZmH5KPcNanZJcWM0+w1qdkn8AAH89a2CKuhtuPT1rYIpcWM0+/38AgH8AAH//fwCAMEmEPcGUYIpcWM0+wZRgin8AAH87pZ2SFm+MPTulnZJcWM0+MrOZmX8AAH8ys5mZbC+PPf+//59cWM0+/7//n38AAH/MzGWmF2+MPczMZaZcWM0+wtphrX8AAH/C2mGtMEmEPT3rnrVcWM0+PeuetX8AAH////+/uhtuPf///79cWM0+Petgyn8AAH8962DKl35KPcLandJcWM0+wtqd0n8AAH/MzJjZVhkfPczMmNlcWM0+/7//338AAH//v//fwy3bPDKzZeZcWM0+MrNl5n8AAH87pWDtFHlfPDulYO1cWM0+wZSe9X8AAH/BlJ71xzIrM/9///9cWM0+/3///38AAH89a571snhfvD1rnvVcWM0+w1pg7X8AAH/DWmDthC3bvMxMZeZcWM0+zExl5n8AAH//P//fPxkfvf8//99cWM0+MjOY2X8AAH8yM5jZgX5KvTwlndJcWM0+PCWd0n8AAH/BFGDKnxtuvcEUYMpcWM0+////v38AAH////+/IEmEvWIENElcWM0+////v38AAH////+/Bm+Mvf///79cWM0+////v38AAH////+/VC+PvT1rnnVcWM0+0mNZeH8AAH////+/Am+Mvf///79cWM0+////v38AAH////+/GUmEvf///79cWM0+////v38AAH////+/iRtuvf///79cWM0+////v38AAH////+/YX5Kvf///79cWM0+////v38AAH////+/GBkfvf///79cWM0+////v38AAH////+/SC3bvP///79cWM0+81xtC38AAH////+/LXhfvP///79cWM0+////v38AAH////+/wdWAM////7+Hzcs+////P38AAIEa7Gc9L3lfPL3cZjuHzcs+xtFPOn8AAIGHyTY6vi3bPArE8jqHzcs+BsGTPH8AAIH/v5c+WBkfPf+/tUCHzcs++L4UQ38AAIFVwLBEmH5KPaXD90WHzcs+bclmRn8AAIHG0QtGuhtuPb3c+0SHzcs+YesBQ38AAIH///8/MEmEPc76DTaHzcs+zPZeLn8AAIGe9OMoFm+MPWv0wySHzcs+5PUFIn8AAIEm+YMgbC+PPS79/x+Hzcs+kv7/X38AAIHV+YNgF2+MPZ321F+Hzcs+DvQsXn8AAIEy80hbMEmEPejzHFeHzcs+CPagUX8AAIH7+U5KuhtuPf///z+Hzcs+////P38AAIH///8/l35KPUP4sDWHzcs+XCF3pn8AAIFc8tItVhkfPQvNb3WHzcs+TO9YKH8AAIH///8/wy3bPP///z+Hzcs+Lu71I38AAIH///8/FHlfPIrupSCHzcs+////P38AAIHG8bQexzIrM+KWbICHzcs+PfdQHn8AAIH/fwCAsnhfvJL+SR+Hzcs+dY9Oin8AAIF9+gdhhC3bvP///z+Hzcs+HvT8YH8AAIH///8/PxkfvWfwL1+Hzcs+////P38AAIHX7gpcgX5Kvf///z+Hzcs+ZO/eV38AAIH///8/nxtuvVzyLVKHzcs+////P38AAIFD+E5KIEmEvf///z+Hzcs+////P38AAIH///8/Bm+MvWHrIjyHzcs+////P38AAIGk2y45VC+Pvf///z+Hzcs+sdCmN38AAIH///8/Am+MverHFzeHzcs+////P38AAIFKwUU3GUmEvf///z+Hzcs+ab3jOH8AAIH///8/iRtuvaC8njuHzcs+////P38AAIGTvkk/YX5Kvf///z+Hzcs+7r3AQn8AAIHwQV7pGBkfvQS+70WHzcs+hFGc5n8AAIGfwctHSC3bvP///z+Hzcs+6seTSH8AAIH///8/LXhfvEHQTUiHzcs+////P38AAIGk29BG6rE1PP///z9Tk7m+YevdQ34ABH////+/6rE1PP///79Tk7m+////v38AAH////+/pX2dM////79Tk7m+////v38AAH////+/pX2dM////79Tk7m+////v38AAH////+/pX2dM////79Tk7m+////v38AAH////+/BTSyPP///79Tk7m+////v34BB3////+/BTSyPP///79Tk7m+////v38AAH////+/91oBPf///79Tk7m+////v34BC3////+/91oBPf///79Tk7m+////v38AAH////+/VKMkPf///79Tk7m+////v34BDn////+/VKMkPf///79Tk7m+////v38AAH////+/AJhBPf///79Tk7m+////P30BEX////8/AJhBPf///z9Tk7m+////P38AAH////8/HhxXPf///z9Tk7m+////P30BE3////8/HhxXPf///z9Tk7m+////P38AAH////8//ltkPf///z9Tk7m+////P30AFH////8//ltkPf///z9Tk7m+////P38AAH////8/T9VoPf///z9Tk7m+////P30AFH////8/T9VoPf///z9Tk7m+////P38AAH////8//1tkPf///z9Tk7m+////P30AFH////8//1tkPf///z9Tk7m+////P38AAH////8/HhxXPf///z9Tk7m+////P33/E3////8/HhxXPQ78/79Tk7m+////v38AAH////+/AJhBPf///79Tk7m+////v33/EX9a+HnAAJhBPf///79Tk7m+3fR1wH8AAH////+/VKMkPWHyc8BTk7m+////v37/Dn/i73HAVKMkPf///79Tk7m+V+5wwH8AAH////+/9VoBPVfu/79Tk7m+////v37/C39X7v+/9VoBPf///79Tk7m+V+7/v38AAH////+//zOyPFfujr9Tk7m+////v37/B3/i74y//zOyPP///79Tk7m+YfKLv38AAH////+/2rE1PN30iL9Tk7m+////v34ABH9a+IS/2rE1PP///79Tk7m+Dvz/v38AAH////+/AG5rM////79Tk7m+////v38AAH////fBAG5rM////79Tk7m+Cv/Rw38AAH////+/aLE1vBH/j8VTk7m+////v34A/H8W/87GaLE1vP///79Tk7m+Gf8NyH8AAH////+/wTOyvB3/08hTk7m+////v34B+X///9PIwTOyvP///79Tk7m+///TyH8AAH////+/11oBvf//08hTk7m+////v34B9X8d/yu311oBvf///79Tk7m+Gf/wt38AAH////+/NqMkvRb/MLlTk7m+////v34B8n////+/NqMkvRH/brpTk7m+////v38AAH8K/y284pdBvf///79Tk7m+///3wX0B738AAP+/4pdBvQAA/79Tk7m+wRSetX8AAH88JWGt/BtXvTIzZaZTk7m+/z//n30B7X/MTJmZ/BtXvcNanZJTk7m+PWtgin8AAH//fwCA3VtkvcGUYIpTk7m+O6Wdkn0A7H8ys5mZ3Vtkvf+//59Tk7m+zMxlpn8AAH/C2mGtItVovT3rnrVTk7m+////v30A7H8962DKItVovcLandJTk7m+zMyY2X8AAH//v//f11tkvTKzZeZTk7m+O6Vg7X0A7H/BlJ7111tkvf9///9Tk7m+PWue9X8AAH/DWmDt8RtXvcxMZeZTk7m+/z//333/7X8yM5jZ8RtXvTwlndJTk7m+wRRgyn8AAH////+/0JdBvf///79Tk7m+////v33/73////+/0JdBvf///79Tk7m+////v38AAH////+/H6Mkvf///79Tk7m+////v37/8n+VHVrpH6Mkvf///79Tk7m+Cx6Iln8AAH////+/vVoBvZxzMnNTk7m+////v38AAH+9ZXx7vVoBvf///79Tk7m+nVh7fn7/9X////+/jjOyvP///79Tk7m+////v38AAH////+/jjOyvM3LbvVTk7m+////v37/+X8ys///8rA1vP///79Tk7m+wEYvDX8AAH////+/8rA1vKoMqd1Tk7m+////v34A/H////+/jTmaM3AduA5dprQ+////v4EAAH8=")
}, {
"aabb": AABB(-0.0699145, -0.0699146, 0.398052, 0.139829, 0.139829, 1.00136e-05),
"attribute_data": PackedByteArray("AOA/PwCgED8AIEk/AIARPwAAUj8AQBQ/AEBaPwCgGD8AYGE/AIAePwBAZz8AoCU/AKBrPwDgLT8AYG4/AMA2PwBAbz8A4D8/AGBuPwAgST8AoGs/AABSPwBAZz8AQFo/AGBhPwBgYT8AQFo/AEBnPwAAUj8AoGs/ACBJPwBgbj8A4D8/AEBvPwDANj8AYG4/AOAtPwCgaz8AoCU/AEBnPwCAHj8AYGE/AKAYPwBAWj8AQBQ/AABSPwCAET8AIEk/AKAQPwDgPz8AgBE/AMA2PwBAFD8A4C0/AKAYPwCgJT8AgB4/AIAePwCgJT8AoBg/AOAtPwBAFD8AwDY/AIARPw=="),
"format": 34359742487,
"index_count": 90,
"index_data": PackedByteArray("HwABAAAAAQADAAIAAwAFAAQABQAHAAYABwAJAAgACQALAAoACwANAAwADQAPAA4ADwARABAAEQATABIAEwAVABQAFQAXABYAFwAZABgAGQAbABoAGwAdABwAHQAfAB4AHwADAAEAAwAHAAUABwALAAkACwAPAA0ADwATABEAEwAXABUAFwAbABkAGwAfAB0AHwAHAAMABwAPAAsADwAXABMAFwAfABsAHwAPAAcADwAfABcA"),
"material": ExtResource("3"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 32,
"vertex_data": PackedByteArray("wdWAM2Mvj72Hzcs+L3lfPBJvjL2Hzcs+vi3bPCtJhL2Hzcs+WBkfPa4bbr2Hzcs+mH5KPY9+Sr2Hzcs+uhtuPUgZH72Hzcs+MEmEPaot27yHzcs+Fm+MPfJ4X7yHzcs+bC+PPQsRGbOHzcs+F2+MPaR4XzyHzcs+MEmEPYMt2zyHzcs+uhtuPToZHz2Hzcs+l35KPX5+Sj2Hzcs+VhkfPaQbbj2Hzcs+wy3bPCBJhD2Hzcs+FHlfPAhvjD2Hzcs+xzIrM1ovjz2Hzcs+snhfvAhvjD2Hzcs+hC3bvB9JhD2Hzcs+PxkfvZUbbj2Hzcs+gX5KvXZ+Sj2Hzcs+nxtuvTYZHz2Hzcs+IEmEvXQt2zyHzcs+Bm+MvYp4XzyHzcs+VC+PvbX6yrOHzcs+Am+MvVZ5X7yHzcs+GUmEvc8t27yHzcs+iRtuvV8ZH72Hzcs+YX5KvaJ+Sr2Hzcs+GBkfvcMbbr2Hzcs+SC3bvDJJhL2Hzcs+LXhfvBZvjL2Hzcs+////P1ovjz2p6nM6AKRXABrb9jb/OXo7Zc+0NAhvjD12xXQzEqZXAMG+4TO2OXM7Wbr1NR9JhD0Pug86I6tXADW+/z9vOV07D7rvRZUbbj1ZuglKM7RXAMG+HUwtOTo7dsWKTHZ+Sj1lz0pLQb9XABrbCEn0OAs7qeqLRTYZHz3///8/TM1XAOf0VTXFONI67e2NLXQt2zxo6bMnVd1XAOnmuyKiOJA6w+dgH4p4Xzzr6y0dWu5XAB70Bx2MOEk6//8bH7X6yrMe9PdiXABXAOvr0mKFOP85w+eeYFZ5X7zp5kNdWhJXAGjpTFiMOLY57e1yUs8t27zn9KpKVSNXAA==")
}]

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.38717, 0)
script = ExtResource("1")

[node name="character_q2" parent="." instance=ExtResource("7_cw2d6")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.0141374, -1.40506, -0.0169247)

[node name="MeshInstance3D" type="MeshInstance3D" parent="character_q2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0744629, 0)
shape = SubResource("1")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="HeadXRotation" type="Node3D" parent="Head"]

[node name="Camera3D" type="Camera3D" parent="Head/HeadXRotation"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0416903)
environment = ExtResource("4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/HeadXRotation/Camera3D"]
libraries = {
&"": SubResource("AnimationLibrary_khinc")
}

[node name="AnimationTree" type="AnimationTree" parent="Head/HeadXRotation/Camera3D"]
tree_root = SubResource("7")
anim_player = NodePath("../AnimationPlayer")
parameters/blend_position = 0.0
parameters/2/blend_position = 0

[node name="Flashlight" type="Node3D" parent="."]
transform = Transform3D(0.999765, 0, 0.0216927, 0, 1, 0, -0.0216927, 0, 0.999765, 0, 1, 0)

[node name="FlashLightMesh" type="MeshInstance3D" parent="Flashlight"]
transform = Transform3D(-0.998874, -0.00386341, -0.0472826, -0.0063765, 0.998568, 0.0531154, 0.04701, 0.0533572, -0.997468, 0.574562, -0.470255, -0.018571)
cast_shadow = 0
mesh = SubResource("8")

[node name="SpotLight3D" type="SpotLight3D" parent="Flashlight/FlashLightMesh"]
transform = Transform3D(-0.999998, -0.00192029, -1.58101e-05, -0.00192027, 0.99987, 0.0160465, -1.52886e-05, 0.0160466, -0.999871, -0.0379944, 0.00350064, 0.317485)
light_energy = 16.0
light_indirect_energy = 5.04
light_volumetric_fog_energy = 3.08
shadow_enabled = true
spot_range = 36.1996
spot_attenuation = 2.37841
spot_angle = 19.8489

[node name="FlashlightSound" type="AudioStreamPlayer3D" parent="Flashlight/FlashLightMesh"]
stream = ExtResource("5")
volume_db = -25.0
unit_size = 100.0
